# filmRatingApp-Django

./: manage.py  pyproject.toml
filmRating/forms/: RatingForm.py  UserForms.py  UserProfileForm.py
filmRating/migrations/: 0003_film_img.py  0004_profile_img.py  0005_rating_description.py
filmRating/models/: Category.py  Film.py  Profile.py  Rating.py  __init__.py
filmRating/templates/: base.html
filmRating/templates/favorites/: favorites.html
filmRating/templates/home/: home.html
filmRating/templates/list/: list.html
filmRating/templates/profile/: edit_profile.html  profile.html
filmRating/templates/ratings/: rated_films.html  ratings.html
filmRating/templates/user/: auth.html  login.html  register.html
filmRating/urls/: FavoritesUrls.py  HomeUrls.py  ProfileUrls.py  RatingUrls.py  UserUrls.py  __init__.py
filmRating/views/: FavoritesViews.py  HomeViews.py  ProfileViews.py  RatingViews.py  UserViews.py  __init__.py
filmRatingAdmin/: db.sqlite3  urls.py  wsgi.py
filmRatingAdmin/filmRating/: admin.py  apps.py
filmRatingAdmin/filmRating/migrations/: 0001_initial.py  0002_remove_film_rating_alter_film_owner.py
filmRatingAdmin/filmRating/models/: Film.py  Profile.py  Rating.py
filmRatingAdmin/filmRating/templates/: base.html
filmRatingAdmin/filmRating/urls/: HomeUrls.py  ProfileUrls.py  __init__.py
filmRatingAdmin/filmRating/views/: HomeViews.py  ProfileViews.py  __init__.py
filmRatingAdmin/filmRatingAdmin/: asgi.py  db.sqlite3  urls.py
filmRatingAdmin/settings/: development.py  settings.py  testing.py
(+3 files in other folders)
