[tool.poetry]
name = "filmrating"
version = "0.1.0"
description = ""
authors = ["gabriel-liraa <gabriel.l.lira26@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
djlint = "^1.32.1"


[tool.poetry.group.dev.dependencies]
djlint = "^1.32.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
